# Open-Source-Health-Tooling

./: README.md  oss-health-setup.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
oss_health/: __init__.py  cli.py  github_client.py  scoring.py
oss_health_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: cli.js  githubClient.js  scoring.js
